# Decomp

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp
app/src/main/cpp/main/: CMakeLists.txt  decomp.cpp
app/src/main/cpp/r2/: CMakeLists.txt  decomp.cpp
app/src/main/cpp/r2/include/: r_userconf.h  r_version.h
app/src/main/java/com/vcx/decomp/: DecompFragment.java  DecompPagerAdapter.java  DecompiledActivity.java  MainActivity.java
app/src/main/java/com/vcx/decomp/adapter/: ExportsAdapter.java  FunctionsAdapter.java  ImportsAdapter.java  NamesAdapter.java  OutputAdapter.java  OverviewAdapter.java  PseudoCAdapter.java  StringsAdapter.java  XRefsAdapter.java
app/src/main/jniLibs/arm64-v8a/: libr_anal.so.6.0  libr_arch.so.6.0  libr_asm.so.6.0  libr_bin.so.6.0  libr_bp.so.6.0  libr_config.so.6.0  libr_cons.so.6.0  libr_core.so.6.0  libr_debug.so.6.0  libr_egg.so.6.0  libr_esil.so.6.0  libr_flag.so.6.0  libr_fs.so.6.0  libr_io.so.6.0  libr_lang.so.6.0  libr_magic.so.6.0  libr_main.so.6.0  libr_muta.so.6.0  libr_reg.so.6.0  libr_search.so.6.0  libr_socket.so.6.0  libr_syscall.so.6.0  libr_util.so.6.0
app/src/main/jniLibs/arm64-v8a/pkgconfig/: r_anal.pc  r_arch.pc  r_asm.pc  r_bin.pc  r_bp.pc  r_config.pc  r_cons.pc  r_core.pc  r_debug.pc  r_egg.pc  r_esil.pc  r_flag.pc  r_fs.pc  r_io.pc  r_lang.pc  r_magic.pc  r_muta.pc  r_reg.pc  r_search.pc  r_socket.pc  r_syscall.pc  r_util.pc
app/src/main/python/: analyzer.py
app/src/main/python/r2pipe-source/: MANIFEST.in  setup.cfg
app/src/main/python/r2pipe-source/r2pipe.egg-info/: SOURCES.txt
app/src/main/res/layout/: activity_decompiled.xml  activity_main.xml  fragment_dual_recycler.xml
app/src/main/res/menu/: decomp_tabs.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
